[1/2] Add proximity wake
Change-Id: Ia2d53ecf637047c596d4ff53113b58a3fd494884
Signed-off-by: Martinusbe <martinusbe@gmail.com>

Conflicts:
	core/res/res/values/slim_symbols.xml
	services/core/java/com/android/server/power/PowerManagerService.java

--- a/core/res/res/values/config.xml
+++ b/core/res/res/values/config.xml
@@ -2624,4 +2624,10 @@
     <string name="operator_ping_url" translatable="false"></string>
     <!-- Zero Balance feature enable config -->
     <bool name="config_zero_balance_operator">false</bool>
+    <!-- Default value for proximity check on screen wake
+         NOTE ! - Enable for devices that have a fast response proximity sensor (ideally < 300ms)
+    -->
+    <bool name="config_proximityCheckOnWake">false</bool>
+    <integer name="config_proximityCheckTimeout">250</integer>
+
 </resources>
