SystemUI: Support recents task locking
This adds the ability to lock task in recents so they won't be cleared when removing all tasks

Ticket: NOUGAT-1

Drawables from material.io

Change-Id: I06ffe411e72d4e837cfec7b9b77fb2519e417bc7

--- a/packages/SystemUI/res/values/tesla_dimens.xml
+++ b/packages/SystemUI/res/values/tesla_dimens.xml
@@ -79,4 +79,7 @@
     <dimen name="navbar_single_hand_mode_horizontal_threshhold">90dp</dimen>
     <dimen name="navbar_single_hand_mode_vertical_threshhold">48dp</dimen>
 
+    <!-- Recents task locking button -->
+    <dimen name="recents_task_view_header_lock_button_padding">44dp</dimen>
+
 </resources>
