--- a/core/res/res/values-night/colors.xml
+++ b/core/res/res/values-night/colors.xml
@@ -16,7 +16,7 @@
     <color name="background_floating_material_dark">@color/material_grey_800</color>
 
     <!-- Notification action text/button -->
-    <color name="secondary_text_material_light">#A2A2A2</color>
+    <color name="secondary_text_material_light">#FFFFFF</color>
 
     <!-- Notification action text -->
     <color name="primary_text_default_material_dark">#FFFFFF</color>
@@ -24,8 +24,14 @@
     <!-- Notification action button -->
     <color name="notification_action_color_filter">#9F9F9F</color>
 
-    <color name="notification_action_list">#000000</color>
+    <color name="notification_action_list">#ffffffff</color>
     <color name="notification_material_background_color">#ff000000</color>
+
+    <!-- The "inside" of a notification, reached via longpress -->
+    <color name="notification_guts_bg_color">#FF000000</color>
+    <color name="notification_guts_title_color">#FFFFFFFF</color>
+    <color name="notification_guts_text_color">#FFFFFF</color>
+    <color name="notification_guts_btn_color">#000000</color>
 
     <!-- System - Accents -->
  	<color name="accent_material_light">#33b5e5</color>
