--- a/packages/SystemUI/res/values-night/colors.xml
+++ b/packages/SystemUI/res/values-night/colors.xml
@@ -19,10 +19,10 @@
     <color name="qs_detail_transition">#000000</color>
 
     <!-- The "inside" of a notification, reached via longpress -->
-    <color name="notification_guts_bg_color">@color/system_secondary_color</color>
+    <color name="notification_guts_bg_color">#FF777777</color>
     <color name="notification_guts_title_color">#FFFFFFFF</color>
-    <color name="notification_guts_text_color">#b2FFFFFF</color>
-    <color name="notification_guts_btn_color">#33b5e5</color>
+    <color name="notification_guts_text_color">#DDFFFFFF</color>
+    <color name="notification_guts_btn_color">#777777</color>
 
     <!-- The color of the legacy notification background -->
     <color name="notification_legacy_background_color">#000000</color>
