--- a/core/res/res/layout-night/global_actions_item.xml
+++ b/core/res/res/layout-night/global_actions_item.xml
@@ -45,7 +45,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="top|start"
             android:gravity="center_vertical|start"
-            android:textColor="@color/primary_text_default_material_dark"
+            android:textColor="#777777"
             android:textAppearance="?android:attr/textAppearanceLarge"
             />
         <TextView android:id="@+id/status"
@@ -53,7 +53,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|start"
             android:minHeight="26dp"
-            android:textColor="@color/secondary_text_default_material_dark"
+            android:textColor="#777777"
             android:textAppearance="?android:attr/textAppearanceSmall"
             />
     </LinearLayout>
