--- a/core/res/res/values-night/styles.xml
+++ b/core/res/res/values-night/styles.xml
@@ -14,27 +14,27 @@
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
      <!-- Notification text colors -->
     <style name="TextAppearance.Material.Notification">
-        <item name="textColor">@color/notification_guts_title_color</item>
-        <item name="textSize">@dimen/notification_title_text_size</item>
+        <item name="textColor">@color/secondary_text_material_dark</item>
+        <item name="textSize">@dimen/notification_text_size</item>
     </style>
 
     <style name="TextAppearance.Material.Notification.Title">
-        <item name="textColor">@color/notification_guts_title_color</item>
+        <item name="textColor">@color/primary_text_material_dark</item>
         <item name="textSize">@dimen/notification_title_text_size</item>
     </style>
 
     <style name="TextAppearance.Material.Notification.Line2">
-        <item name="textColor">@color/notification_guts_text_color</item>
+        <item name="textColor">@color/secondary_text_material_dark</item>
         <item name="textSize">@dimen/notification_subtext_size</item>
     </style>
 
     <style name="TextAppearance.Material.Notification.Info">
-        <item name="textColor">@color/notification_guts_title_color</item>
+        <item name="textColor">@color/secondary_text_material_dark</item>
         <item name="textSize">@dimen/notification_subtext_size</item>
     </style>
 
     <style name="TextAppearance.Material.Notification.Time">
-        <item name="textColor">@color/notification_guts_text_color</item>
+        <item name="textColor">@color/secondary_text_material_dark</item>
         <item name="textSize">@dimen/notification_subtext_size</item>
     </style>
     
@@ -63,6 +63,6 @@
 		<item name="android:textColor">#FFFFFF</item>
 	</style>
 	<style name="TextAppearance.Material.Small">
-		<item name="android:textColor">#CCCCCC</item>
+		<item name="android:textColor">#9A9A9A</item>
 	</style>
 </resources>
