--- a/packages/SystemUI/res/values/colors.xml
+++ b/packages/SystemUI/res/values/colors.xml
@@ -94,11 +94,11 @@
     <color name="notification_gear_color">#ff757575</color>
 
     <!-- The "inside" of a notification, reached via longpress -->
-    <color name="notification_guts_bg_color">#ffffff</color>
+    <color name="notification_guts_bg_color">#eeeeee</color>
     <color name="notification_guts_disabled_slider_color">@*android:color/material_grey_300</color>
     <color name="notification_guts_secondary_slider_color">#858383</color>
-    <color name="notification_guts_icon_tint">#8a000000</color>
-    <color name="notification_guts_disabled_icon_tint">#4d000000</color>
+    <color name="notification_guts_icon_tint">#8a777777</color>
+    <color name="notification_guts_disabled_icon_tint">#4d777777</color>
 
     <color name="assist_orb_color">#ffffff</color>
 
