--- a/packages/SystemUI/res/layout/remote_input.xml
+++ b/packages/SystemUI/res/layout/remote_input.xml
@@ -35,7 +35,7 @@
             android:paddingEnd="12dp"
             android:gravity="start|center_vertical"
             android:textAppearance="?android:attr/textAppearance"
-            android:textColor="@color/remote_input_text"
+            android:textColor="#FFFFFF"
             android:textColorHint="@color/remote_input_hint"
             android:textSize="16sp"
             android:background="@null"
