Fix unselected radio button color.

--- a/packages/SystemUI/res/color/circle_list_item_text.xml
+++ b/packages/SystemUI/res/color/circle_list_item_text.xml
@@ -2,6 +2,6 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
     <!-- default -->
-    <item android:color="@android:color/primary_text_dark"/>
+    <item android:color="#777777"/>
 
 </selector>
