--- a/packages/SystemUI/res/values-night/tesla_colors.xml
+++ b/packages/SystemUI/res/values-night/tesla_colors.xml
@@ -17,7 +17,7 @@
 <resources>
 
     <!-- Floating action button -->
-    <color name="fab_color">#ff33b5e5</color>
-    <color name="floating_action_button_icon_color">#ffffff</color>
+    <color name="fab_color">#ff777777</color>
+    <color name="floating_action_button_icon_color">#777777</color>
 
 </resources>
