Expose screen pinning dialog background and text color
Using a theme like Domination or any other that's similar, if you apply a
white accent then you get white on white. The whole dialog is white because
it uses the accent color and the text is hardcoded (until now) to use white
text.

This fixes that issue and allows themers to unfuck this and make it good again

Before - http://i.imgur.com/HUiZ4jN.jpg
After - http://i.imgur.com/UsBzsXJ.jpg

HUGE THANKS @daveyannihilation for being awesome!

Change-Id: Ic32a6f6545aeaef5e2cd38f28f1aa695e3ffa936

--- a/packages/SystemUI/res/values/tesla_colors.xml
+++ b/packages/SystemUI/res/values/tesla_colors.xml
@@ -52,4 +52,8 @@
     <!-- OmniJaws detailed view temperature text -->
     <color name="omni_jaws_detailed_temperature_color">@android:color/white</color>
 
+    <!-- Screen pinning layout -->
+    <color name="screen_pinning_background_color">@*android:color/accent_device_default_light</color>
+    <color name="screen_pinning_button_text">@android:color/white</color>
+
 </resources>
