--- a/packages/SystemUI/res/layout/recents_task_view_header.xml
+++ b/packages/SystemUI/res/layout/recents_task_view_header.xml
@@ -56,25 +56,6 @@
         android:alpha="0"
         android:visibility="gone" />
     <com.android.systemui.recents.views.FixedSizeImageView
-        android:id="@+id/lock_to_app_fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical|end"
-        android:padding="@dimen/recents_task_view_header_button_padding"
-        android:background="?android:selectableItemBackground"
-        android:visibility="gone"
-        android:src="@drawable/ic_pin" />
-    <com.android.systemui.recents.views.FixedSizeImageView
-        android:id="@+id/lock_task"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical|end"
-        android:padding="@dimen/recents_task_view_header_button_padding"
-        android:src="@drawable/recents_dismiss_light"
-        android:background="?android:selectableItemBackground"
-        android:alpha="0"
-        android:visibility="gone" />
-    <com.android.systemui.recents.views.FixedSizeImageView
         android:id="@+id/dismiss_task"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -84,6 +65,16 @@
         android:background="?android:selectableItemBackground"
         android:alpha="0"
         android:visibility="gone" />
+    <com.android.systemui.recents.views.FixedSizeImageView
+        android:id="@+id/lock_to_app_fab"
+        android:layout_width="48.0dip"
+        android:layout_height="48.0dip"
+        android:layout_marginEnd="40.0dip"
+        android:layout_gravity="end|center"
+        android:padding="12.0dip"
+        android:background="?android:selectableItemBackground"
+        android:visibility="gone"
+        android:src="@drawable/ic_pin" />
 
     <!-- The progress indicator shows if auto-paging is enabled -->
     <ViewStub android:id="@+id/focus_timer_indicator_stub"
